--- a/backend/package.json
+++ b/backend/package.json
@@ -1,24 +1,30 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "description": "Backend for a simple calendar application",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
-  "keywords": [],
+  "keywords": [
+    "backend",
+    "calendar",
+    "api"
+  ],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
-  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.12.0",
     "mongoose": "^8.9.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
